--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <style type="text/css">.body { width: auto; }</style>
   </head>
   <body>
-
+    <h1> Modifié comme je le souhaite</h1>
   </body>
 </html>
